/*
 * Api Documentation
 * Api Documentation
 *
 * OpenAPI spec version: 1.0
 * 
 *
 * NOTE: This class is auto generated by the swagger code generator program.
 * https://github.com/swagger-api/swagger-codegen.git
 * Do not edit the class manually.
 */


package com.ericdriggs.reportcard.client.api;

import java.util.Objects;
import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.annotation.JsonCreator;
import com.fasterxml.jackson.annotation.JsonValue;
import io.swagger.annotations.ApiModel;
import io.swagger.annotations.ApiModelProperty;

/**
 * Repo
 */
@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaClientCodegen", date = "2020-09-26T23:36:11.148-07:00")
public class Repo {
  @JsonProperty("orgFk")
  private Integer orgFk = null;

  @JsonProperty("repoId")
  private Integer repoId = null;

  @JsonProperty("repoName")
  private String repoName = null;

  public Repo orgFk(Integer orgFk) {
    this.orgFk = orgFk;
    return this;
  }

   /**
   * Get orgFk
   * @return orgFk
  **/
  @ApiModelProperty(value = "")
  public Integer getOrgFk() {
    return orgFk;
  }

  public void setOrgFk(Integer orgFk) {
    this.orgFk = orgFk;
  }

  public Repo repoId(Integer repoId) {
    this.repoId = repoId;
    return this;
  }

   /**
   * Get repoId
   * @return repoId
  **/
  @ApiModelProperty(value = "")
  public Integer getRepoId() {
    return repoId;
  }

  public void setRepoId(Integer repoId) {
    this.repoId = repoId;
  }

  public Repo repoName(String repoName) {
    this.repoName = repoName;
    return this;
  }

   /**
   * Get repoName
   * @return repoName
  **/
  @ApiModelProperty(value = "")
  public String getRepoName() {
    return repoName;
  }

  public void setRepoName(String repoName) {
    this.repoName = repoName;
  }


  @Override
  public boolean equals(java.lang.Object o) {
    if (this == o) {
      return true;
    }
    if (o == null || getClass() != o.getClass()) {
      return false;
    }
    Repo repo = (Repo) o;
    return Objects.equals(this.orgFk, repo.orgFk) &&
        Objects.equals(this.repoId, repo.repoId) &&
        Objects.equals(this.repoName, repo.repoName);
  }

  @Override
  public int hashCode() {
    return Objects.hash(orgFk, repoId, repoName);
  }


  @Override
  public String toString() {
    StringBuilder sb = new StringBuilder();
    sb.append("class Repo {\n");
    
    sb.append("    orgFk: ").append(toIndentedString(orgFk)).append("\n");
    sb.append("    repoId: ").append(toIndentedString(repoId)).append("\n");
    sb.append("    repoName: ").append(toIndentedString(repoName)).append("\n");
    sb.append("}");
    return sb.toString();
  }

  /**
   * Convert the given object to string with each line indented by 4 spaces
   * (except the first line).
   */
  private String toIndentedString(java.lang.Object o) {
    if (o == null) {
      return "null";
    }
    return o.toString().replace("\n", "\n    ");
  }
  
}

