/*
 * This file is generated by jOOQ.
 */
package com.ericdriggs.reportcard.pojos;


import lombok.Data;

import java.io.Serializable;
import java.math.BigDecimal;
import java.time.LocalDateTime;


@Data
public class TestResult implements Serializable {

    private static final long serialVersionUID = -4496620756225217991L;

    private Long testResultId;
    private Long stageFk;
    private Integer tests;
    private Integer skipped;
    private Integer error;
    private Integer failure;
    private BigDecimal time;
    private LocalDateTime testResultCreated;
    private Boolean isSuccess;
    private Boolean hasSkip;
    private String externalLinks;
}
