/*
 * This file is generated by jOOQ.
 */
package com.ericdriggs.reportcard.pojos;


import lombok.Data;
import lombok.experimental.Accessors;

import javax.annotation.processing.Generated;
import java.io.Serializable;
import java.math.BigDecimal;

@Data
public class TestSuite implements Serializable {

    private static final long serialVersionUID = -200588524670176256L;

    private Long       testSuiteId;
    private Long       testResultFk;
    private Integer    tests;
    private Integer    skipped;
    private Integer    error;
    private Integer    failure;
    private BigDecimal time;
    private String     package_;
    private String     group;
    private String     properties;
    private Boolean    isSuccess;
    private Boolean    hasSkip;

    public String getPackage() {
        return package_;
    }

    public TestSuite setPackage(String package_) {
        this.package_ = package_;
        return this;
    }
}

