//package com.ericdriggs.ragnarok.model;
//
//import com.ericdriggs.ragnarok.interfaces.HasId;
//import com.ericdriggs.ragnarok.interfaces.HasNameId;
//import lombok.Data;
//
//import javax.persistence.*;
//
//@Data
//@Entity
//public class Stage implements HasNameId
//{
//    @Id
//    @GeneratedValue(strategy= GenerationType.SEQUENCE, generator="seq_stage")
//    private Long id;
//    private String name;
//    @ManyToOne
//    private App app;
//
//}
